--- a/webvr/package.json
+++ b/webvr/package.json
@@ -18,5 +18,8 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0"
+  },
+  "dependencies": {
+    "web-audio-ios": "^1.0.2"
   }
 }
